RESOLVED FIXED160148
MathICs should be able to take and dump stats about code size
https://bugs.webkit.org/show_bug.cgi?id=160148
Summary MathICs should be able to take and dump stats about code size
Saam Barati
Reported 2016-07-24 15:39:33 PDT
We should implement something akin to Options::useICStats for property access ICs.
Attachments
patch (14.13 KB, patch)
2016-07-25 12:59 PDT, Saam Barati
fpizlo: review+
Saam Barati
Comment 1 2016-07-25 12:59:20 PDT
Filip Pizlo
Comment 2 2016-07-25 13:00:38 PDT
Comment on attachment 284515 [details] patch Any reason why this can't be a runtime option?
WebKit Commit Bot
Comment 3 2016-07-25 13:01:21 PDT
Attachment 284515 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:4584: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:4601: Missing spaces around / [whitespace/operators] [3] ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:4605: Missing spaces around / [whitespace/operators] [3] Total errors found: 3 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 4 2016-07-25 13:43:12 PDT
Saam Barati
Comment 5 2016-07-25 13:45:08 PDT
(In reply to comment #2) > Comment on attachment 284515 [details] > patch > > Any reason why this can't be a runtime option? Oops. I landed before I saw your question. A couple of reasons why I made it a compile time flag: 1. It adds a field to MathIC, so we don't want to pay for the memory used by that field if we're not using the option. 2. I want to start adding the dump call in more places along each operationValue<Mul/Add/ect> operation, and I don't want to pay for the branch, even though it will be well predicted.
Note You need to log in before you can comment on or make changes to this bug.